# packsight

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
core/: Cargo.toml  log4rs.yaml
core/src/: error.rs  game.rs  main.rs
core/src/models/serde/: clocks.rs  game.rs  game_file_state.rs  jam.rs  misc.rs  mod.rs  period.rs  team.rs  timeout.rs  utils.rs  version.rs
example-data/: STATS-2026-04-11_NashvilleRollerDerbyMusicCityAllStars_vs_RiverCityRollerDerbyRiot.json  STATS-2026-04-11_NashvilleRollerDerbyMusicCityBrawlStars_vs_RiverCityRollerDerbyRiverRats.json  crg-game-2025-03-24__Penguins_vs._Polar_Bears_(Finished__129_-_87).json
live/: Cargo.toml
web/: Cargo.toml
web/standalone/: index.html  viewer.js
