[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.29"
log4rs = "1.4.0"
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["unbounded_depth"] }
serde_millis = "0.1.1"
serde_path_to_error = "0.1.20"
serde_xml = "0.9.1"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["chrono", "derive", "sqlite", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.23.0", features = ["serde"] }
